fixed fetch request and controllers
