# public/openapi/write.yaml
@@ -178,5 +178,5 @@ paths:
     $ref: "write/files.yaml"
   /files/folder:
     $ref: "write/files/folder.yaml"
-  /career/signup:
-    $ref: 'write/career/signup.yaml'
+  /career/register:
+    $ref: 'write/career/register.yaml'
